Alterado gradiente. Adcionada troca de imagem de fundo.

--- a/HTML/Recriando-a-Interface-do-Netflix/index.html
+++ b/HTML/Recriando-a-Interface-do-Netflix/index.html
@@ -30,8 +30,8 @@
     <main>
         <div class="filme-principal">
             <div class="container">
-                <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
+                <h3 class="titulo">THE UMBRELLA ACADEMY</h3>
+                <p class="descricao">Com a morte do pai, irmãos com poderes extraordinários se reencontram e descobrem surpreendentes segredos de família – além de uma ameaça iminente à humanidade.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
                         <i class="fas fa-play"></i>
@@ -43,6 +43,7 @@
                     </button>
                 </div>
             </div>
+            <img class="image" src="img/mini1.jpg" alt="">
         </div>
     </main>
 
@@ -80,8 +81,6 @@
                 </div>
         </div>
     </div>
-
-
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
     <script src="js/owl/jquery.min.js"></script>
