--- a/HTML/Recriando-Jogo-Dinossauro-sem-Internet/index.html
+++ b/HTML/Recriando-Jogo-Dinossauro-sem-Internet/index.html
@@ -7,6 +7,7 @@
   <script src="script.js" charset="UTF-8" defer></script>
 </head>
 <body>
+  <div class="Texto"><p>Pressione qualquer tecla</p></div>
   <div class="background">
     <div class="dino"></div>
   </div>
