--- a/HTML/Recriando-a-Interface-do-Netflix/index.html
+++ b/HTML/Recriando-a-Interface-do-Netflix/index.html
@@ -15,7 +15,13 @@
     <title>NETFLIX CLONE</title>
 </head>
 <body>
-    <header>
+    <div class="modalExibeTrailer" style="display: none">
+        <div class="modal-content ">
+            <button role="button" class="btnClose" onclick="closeMovie()">
+                <span aria-hidden="true">×</span>
+            </button>           
+        </div>
+    </div>    <header>
         <div class="container">
             <h2 class="logo">NETFLIX</h2>
             <nav>
@@ -26,14 +32,13 @@
             </nav>
         </div>
     </header>
-
     <main>
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">THE UMBRELLA ACADEMY</h3>
                 <p class="descricao">Com a morte do pai, irmãos com poderes extraordinários se reencontram e descobrem surpreendentes segredos de família – além de uma ameaça iminente à humanidade.</p>
                 <div class="botoes">
-                    <button role="button" class="botao">
+                    <button role="button" class="botao" onclick="playMovie()">
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
