--- a/HTML/Recriando-Jogo-Dinossauro-sem-Internet/index.html
+++ b/HTML/Recriando-Jogo-Dinossauro-sem-Internet/index.html
@@ -5,9 +5,18 @@
   <title>Dio Dino Game</title>
   <link rel="stylesheet" href="style/style.css"></link>
   <script src="script/script.js" charset="UTF-8" defer></script>
+  <style>
+    @font-face{
+      font-family: myArcadeFont;
+      src: url('/font/ARCADE_N.TTF');
+    }
+    div{
+      font-family: myArcadeFont;
+    }
+  </style>
 </head>
 <body>
-  <div class="Texto"><p>Pressione qualquer tecla</p></div>
+  <div class="texto"><p>Pressione  qualquer  tecla</p></div>
   <div class="background">
     <div class="dino"></div>
   </div>
